updated search mechansim